--- a/TodoAppWebApiUsingMongoDb/TodoAppWebApiUsingMongoDb/TodoAppWebApiUsingMongoDb.csproj
+++ b/TodoAppWebApiUsingMongoDb/TodoAppWebApiUsingMongoDb/TodoAppWebApiUsingMongoDb.csproj
@@ -6,6 +6,7 @@
 
   <ItemGroup>
     <PackageReference Include="ExchangeAPI" Version="1.543.1922" />
+    <PackageReference Include="Microsoft.AspNet.WebApi.WebHost" Version="5.2.7" />
     <PackageReference Include="MongoDB.Driver" Version="2.11.4" />
   </ItemGroup>
 
